samples/_failures_safe/1761524564_4e720d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c57b7b3.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1c57b7b3.c:164:9: error: expected expression at end of input
  164 |         strcpy(tokens[
      |         ^~~~~~
./samples/SAFE/__tmp_1c57b7b3.c:164:9: error: too few arguments to function ‘strcpy’
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_1c57b7b3.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:77:1: note: declared here
   77 | __NTH (strcpy (char *__restrict __dest, const char *__restrict __src))
      | ^~~~~
./samples/SAFE/__tmp_1c57b7b3.c:164:9: error: expected declaration or statement at end of input
  164 |         strcpy(tokens[
      |         ^~~~~~
./samples/SAFE/__tmp_1c57b7b3.c:164:9: error: expected declaration or statement at end of input
